--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
       <link rel="stylesheet" href="css/style.css">
-      <title>Xer Anime</title>
+      <title>AnimXer</title>
    </head>
 
 <body>
    <nav class="navbar navbar-dark bg-dark">
       <div class="container">
           <div class="navbar-header">
-              <a href="" class="navbar-brand">Xer Anime</a>
+              <a href="" class="navbar-brand">Animxer</a>
           </div>
           <form action="" id="searchForm">
               <input type="text" name="" id="searchText" class="form-control" placeholder="Search Animes">
