--- a/anime/index.html
+++ b/anime/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Watch Anime</title>
+        <title>AnimXer</title>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
             integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-md">
                 <div class="navbar-header">
-                    <a href="../" class="navbar-brand">Exortix Anime</a>
+                    <a href="../" class="navbar-brand">AnimXer</a>
                 </div>
                 <a class="navbar-brand" href="../">Back</a>
             </div>
