--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <nav class="navbar navbar-dark bg-dark">
       <div class="container">
           <div class="navbar-header">
-              <a href="" class="navbar-brand">Animxer</a>
+              <a href="" class="navbar-brand">AnimXer</a>
           </div>
           <form action="" id="searchForm">
               <input type="text" name="" id="searchText" class="form-control" placeholder="Search Animes">
